--- a/app/src/main/res/layout/fragment_grades_of_semester.xml
+++ b/app/src/main/res/layout/fragment_grades_of_semester.xml
@@ -1,28 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:id="@+id/sv_view_root"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray">
+    android:background="@color/white">
 
     <RelativeLayout
-        android:id="@+id/rl_root_view"
+        android:id="@+id/mask_download_semester"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginEnd="8dp"
+        android:visibility="visible"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:paddingBottom="16dp">
+        android:layout_marginBottom="8dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_all_grades"
+        <TextView
+            android:id="@+id/semester_grades_not_downloaded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@color/colorPrimary"
+            android:fontFamily="@font/roboto_regular"
+            android:textSize="18sp"
+            android:text="@string/semester_grades_not_downloaded"/>
+
+        <ProgressBar
+            android:id="@+id/progress_bar_semester"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_below="@id/semester_grades_not_downloaded"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="4dp"
+            android:visibility="invisible"
+            android:indeterminate="true"/>
 
+        <Button
+            android:id="@+id/btn_download_semester_grades"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/progress_bar_semester"
+            android:layout_centerHorizontal="true"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:fontFamily="@font/roboto_regular"
+            android:text="@string/download_grades"/>
     </RelativeLayout>
 
-</ScrollView>
+    <ScrollView
+        android:id="@+id/sv_view_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/light_gray"
+        android:visibility="invisible">
+
+        <RelativeLayout
+            android:id="@+id/rl_root_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:paddingBottom="16dp">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_all_grades"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+        </RelativeLayout>
+    </ScrollView>
+
+</RelativeLayout>
