--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -76,6 +76,12 @@
             android:summaryOn="@string/pref_do_show_score"/>
 
         <Preference
+            android:icon="@drawable/ic_sync_accent_30dp"
+            android:key="reset_grades"
+            android:title="@string/pref_clear_all_semesters_grades"
+            android:summary="@string/pref_clear_all_semesters_grades_summary"/>
+
+        <Preference
             android:icon="@drawable/ic_logoff_accent_30dp"
             android:key="logoff_key"
             android:summary="@string/pref_logoff_summary"
