--- a/app/src/main/res/layout/list_class_grade_item.xml
+++ b/app/src/main/res/layout/list_class_grade_item.xml
@@ -27,12 +27,12 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_below="@id/rv_discipline_grades"
         android:textSize="14sp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/roboto_medium"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/colorPrimary"
@@ -41,17 +41,17 @@
     <TextView
         android:id="@+id/mean_text"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_below="@id/rv_discipline_grades"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:textSize="14sp"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/roboto_medium"
         android:textAlignment="center"
         android:gravity="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         tools:text="10,0"/>
 
 </RelativeLayout>
