--- a/app/src/main/res/layout/card_class_details_prev_and_next.xml
+++ b/app/src/main/res/layout/card_class_details_prev_and_next.xml
@@ -36,6 +36,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_last_class"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_regular"
@@ -61,6 +62,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_next_class"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_regular"
