--- a/app/src/main/res/layout/activity_class_details.xml
+++ b/app/src/main/res/layout/activity_class_details.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/lighter_gray"
+    android:animateLayoutChanges="true"
     tools:context="com.forcetower.uefs.activity.ClassDetailsActivity">
 
     <android.support.v7.widget.Toolbar
