--- a/app/src/main/res/layout/schedule_class_item.xml
+++ b/app/src/main/res/layout/schedule_class_item.xml
@@ -18,7 +18,7 @@
         android:layout_alignStart="@id/tv_class_time"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/black"
+        android:textColor="@color/primaryText"
         android:textSize="14sp"
         tools:text="MI - Circuitos Elétricos e Eletrônicos"/>
 
@@ -30,9 +30,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:alpha="0.54"
         android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/black"
+        android:textColor="@color/secondaryText"
         android:textSize="12sp"
         tools:text="07:30 ~ 09:30"/>
 
@@ -46,9 +45,8 @@
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@id/tv_class_time"
         android:layout_toRightOf="@id/tv_class_time"
-        android:alpha="0.54"
         android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/black"
+        android:textColor="@color/secondaryText"
         android:textSize="12sp"
         tools:text="UEFS - Módulo 3 - PAT37"/>
 
