--- a/app/src/main/res/layout/activity_universe.xml
+++ b/app/src/main/res/layout/activity_universe.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|enterAlways"
+            android:visibility="gone"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
