--- a/app/src/main/res/layout/fragment_universe_know_more.xml
+++ b/app/src/main/res/layout/fragment_universe_know_more.xml
@@ -5,4 +5,12 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:padding="16dp"
+        android:text="@string/universe_alpha_open"
+        android:textColor="@color/primaryText"/>
+
 </RelativeLayout>
