--- a/app/src/main/res/layout/card_discipline_classes.xml
+++ b/app/src/main/res/layout/card_discipline_classes.xml
@@ -134,9 +134,21 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_support_material"
+            <TextView
+                android:id="@+id/dev_tv_helper_material_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:text="@string/class_helper_materials"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/primaryText"
+                android:fontFamily="@font/roboto_regular"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_below="@id/dev_tv_helper_material_id"
+                android:id="@+id/rv_support_material"
+                android:layout_marginTop="4dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"
