--- a/app/src/main/res/values/service_strings.xml
+++ b/app/src/main/res/values/service_strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_service_account_secret">2.eATzRA3~[eTVM37q#)</string>
-    <string name="app_service_client_secret">kYVjtz6Uqthl0U3KpfuBwBeUXgbjgcLsuvh0eOZj</string>
+    <string name="app_service_account_secret" translatable="false">2.eATzRA3~[eTVM37q#)</string>
+    <string name="app_service_client_secret" translatable="false">kYVjtz6Uqthl0U3KpfuBwBeUXgbjgcLsuvh0eOZj</string>
 </resources>
