--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,6 +50,7 @@
     <color name="big_tray_color">#F44336</color>
 
     <color name="facebook_blue">#3B5998</color>
+    <color name="red">#F44336</color>
 
 
     <color name="dis_01">#2196F3</color>
